--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 dotenv = "0.15"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+chrono = "0.4"
+tokio-cron-scheduler = { version = "0.9", features = ["signal"] }
