--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ dotenv = "0.15"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 chrono = "0.4"
+chrono-tz = "0.8"
 tokio-cron-scheduler = { version = "0.9", features = ["signal"] }
